k8s/domains/plans/components/outbox-publisher/infra/base/outbox-publisher-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: outbox-publisher
spec:
  replicas: 1
  selector:
    matchLabels:
      app: outbox-publisher
  template:
    metadata:
      labels:
        app: outbox-publisher
    spec:
      terminationGracePeriodSeconds: 15
      automountServiceAccountToken: false

      containers:
        - name: outbox-publisher
          image: ghcr.io/mstaicu/plans-outbox-publisher
          ports:
            - name: health
              containerPort: 3000

          readinessProbe:
            httpGet:
              path: /readyz
              port: health
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 5
            failureThreshold: 2

          livenessProbe:
            httpGet:
              path: /livez
              port: health
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 1
            failureThreshold: 2
